# jellyfin-teddy

./: README.md  build-n-install.sh  pyproject.toml
src/jellyfin_teddy/: __init__.py
