[project]
name = "jellyfin-teddy"
version = "0.1.0"
description = "Jellyfin AI 剧集整理工具"
authors = [{ name = "KroMiose", email = "li_xiangff@163.com" }]
dependencies = [
    "prompt-toolkit>=3.0.47",
    "openai>=1.44.0",
    "appdirs>=1.4.4",
    "miose-toolkit-llm[all]>=0.0.2",
]
requires-python = ">=3.8,<3.12"
readme = "README.md"
license = { text = "MIT" }


[project.scripts]
jellyfin-teddy = "jellyfin_teddy:main"


[tool.pdm]
distribution = true

[tool.black]
line-length = 128

[tool.ruff]
extend-exclude = []
ignore = [
    "E402",
    "E501",
    "E722",
    "B008",
    "B905",
    "F401",
    "TID252",
    "TRY002",
    "TRY003",
    "RUF001",
    "RUF002",
    "RUF003",
    "RUF006",
    "RUF012",
    "RUF100",
    "PGH003",
    "N801",
    "A003",
]
select = [
    "F",
    "E",
    "I",
    "B",
    "A",
    "COM",
    "C4",
    "ISC",
    "PIE",
    "PYI",
    "Q",
    "RSE",
    "RET",
    "SLF",
    "SIM",
    "TID",
    "ARG",
    "PTH",
    "PGH",
    "TRY",
    "RUF",
]
